// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package internal.testdata.service.proto;

option go_package = "namespacelabs.dev/foundation/internal/testdata/service/proto";

import "google/protobuf/empty.proto";
import "internal/testdata/service/proto/list.proto";

service MultiDbListService {
    rpc AddRds(AddRequest) returns (google.protobuf.Empty);
    rpc AddPostgres(AddRequest) returns (google.protobuf.Empty);
    rpc AddMaria(AddRequest) returns (google.protobuf.Empty);
    // Merges from all dbs.
    rpc List(google.protobuf.Empty) returns (ListResponse);
}