// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package std.testdata.service.multidb;

option go_package = "namespacelabs.dev/foundation/std/testdata/service/multidb";

import "google/protobuf/empty.proto";

message AddRequest {
    string item = 1;
}

message ListResponse {
    repeated string item = 1;
}

service ListService {
    rpc AddPostgres(AddRequest) returns (google.protobuf.Empty);
    rpc AddMaria(AddRequest) returns (google.protobuf.Empty);
    rpc List(google.protobuf.Empty) returns (ListResponse);
}